Font size corrections on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 #wave {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     color: var(--blue);
 }
 h1 {
@@ -24,7 +24,7 @@ h1 {
 }
 h1,
 h2.heading {
-    font-size: 4rem;
+    font-size: 3.6rem;
     margin-block: 10px;
 }
 
@@ -38,16 +38,16 @@ h3 {
 }
 
 h2 {
-    font-size: 2.6rem;
+    font-size: 2.4rem;
 }
 
 h3 {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
 }
 
 p {
     line-height: 1.3;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     color: var(--font-color);
 }
 
